--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+# nngs
+
+勉強しようぜ☆（＾～＾）  
+Git hub のフォークの使い方が分からん☆（＾～＾）どうなってるんだぜ☆（＾～＾）？  
+
+
 -------------------------------------------------------------------
 -- NNGS SERVER README
 -------------------------------------------------------------------
