--- a/README
+++ b/README
@@ -121,49 +121,9 @@ To run and test it:
 4. 将来のバージョンでは おそらくさらに設定ファイルに項目が追加されるでしょう☆  
    可能な追加については、 nngs.cnf または written.cnf を調べてください☆
 
---------------------------------------------
--- RUNNING NNGS FROM INSIDE A CHROOT() 'JAIL'
---------------------------------------------
+## chroot() なんか要らんので削除☆（＾～＾）
 
-If you want nngs to run in a chroot()ed environment ('jail')
-, you'll have to do some manual tuning.
-
-*************************************************
-*** NOTE: if you don't know what chroot() is, ***
-*** you will probably *not* want it!          ***
-*************************************************
-
-1) the chroot() systemcall itself requires root privileges.
-   nngssrv starts as root, then
-   - chdir()s to its cage
-   - chroot()s
-   fork()s twice
-   - , and changes gid and uid.
-   Currently, it does *not* 
-   - close filedescriptors,
-   - change process group,
-   - detach from its CTTY.
-   Just the two forks should do.
-
-2) Mail cannot be sent fom a chroot()ed program using /usr/bin/mail et.al.
-   (unless a copy exists in the jail, which will also need the loader, and
-   part of the /lib/*so, and maybe more)
-   If you configure the mailer to be SMTP (by setting mail_program=SMTP),
-   a built-in mailer is used. This will only need gethostbyname(), which
-   relies on /etc/hosts and/or /etc/resolv.conf. These files need to be
-   present in the jail, or mail won't work.
-
-3) For safety: if anything fails (chroot, setuid, ...) the program will
-   refuse to work and will exit() before doing anything useful.
-
-4) Maybe (?depending on platform?) other files (/dev/zero?) are needed.
-
-5) As an aid in debugging, a file "written.cnf" is written inside the
-   chroot() -jail. The pathnames in this file will be relative to the
-   chroot() directory. (the prefix is snipped) You can use this to check
-   NNGS's assumptions about where things should be located.
-
-6) YMMV
+消した☆（＾～＾）  
 
 ---------------------------------------------------
 -- USERS AND ADMINS
